infra/argo/cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: argo-cd
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: "/argocd"
          backend:
            service:
              name: argocd-server
              port:
                number: 443
  - host: "argocd.local"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: argocd-server
              port:
                number: 443
